--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,4 +10,7 @@
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
       Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   }
+  button {
+    -webkit-tap-highlight-color: transparent;
+  }
 }
