--- a/src/assets/components.css
+++ b/src/assets/components.css
@@ -1,6 +1,7 @@
 @layer base {
-  .toggle-theme {
+  .theme-toggle {
     --size: 2rem;
+    --icon-fill: @apply text-slate-700;
     background: none;
     border: none;
     padding: 0;
@@ -10,16 +11,63 @@
     border-radius: 50%;
     cursor: pointer;
     touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
     outline-offset: 5px;
-  }
 
-  .toggle-theme > svg {
-    inline-size: 100%;
-    block-size: 100%;
-    stroke-linecap: round;
+    & > svg {
+      inline-size: 100%;
+      block-size: 100%;
+      stroke-linecap: round;
+    }
+
+    @media (hover: none) {
+      --size: 48px;
+    }
   }
 
   .toggle-sun-beams {
     stroke-width: 2px;
+  }
+
+  .sun-and-moon {
+    & > :is(.sun, .moon, .sun-beams) {
+      transform-origin: center center;
+    }
+
+    & > :is(.sun, .moon) {
+      fill: var(--icon-fill);
+
+      @nest .theme-toggle:is(:hover, :focus-visible) > & {
+        fill: var(--icon-fill-hover);
+      }
+    }
+
+    & > .sun-beams {
+      stroke: var(--icon-fill);
+      stroke-width: 2px;
+
+      @nest .theme-toggle:is(:hover, :focus-visible) & {
+        stroke: var(--icon-fill-hover);
+      }
+    }
+
+    @nest [data-theme='dark'] & {
+      & > .sun {
+        transform: scale(1.75);
+      }
+
+      & > .sun-beams {
+        opacity: 0;
+      }
+
+      & > .moon > circle {
+        transform: translateX(-7px);
+
+        @supports (cx: 1) {
+          transform: translateX(0);
+          cx: 17;
+        }
+      }
+    }
   }
 }
